<resources>
    <string name="app_name">Coupang_EatsClone</string>
    <string name="join_text">동의에는 필수 및 선택 목적(광고성 정보 수신 포함)에 대한 동의가 포함되어 있으며, 선\n택 목적의 동의를 거부하시는
    경우에도 서비스 이용이 가능합니다.</string>
    <string name="join_sub1">[필수] 만 14세 이상입니다</string>
    <string name="join_sub2">[필수] 쿠팡 이용약관 동의</string>
    <string name="join_sub3">[필수] 전자금융거래 이용약관 동의</string>
    <string name="join_sub4">[필수] 개인정보 수집 및 이용 동의</string>
    <string name="join_sub5">[필수] 개인정보 제3자 제공 동의</string>
    <string name="join_sub6">[선택] 광고성 목적의 개인정보 수집 및 이용 동의</string>
    <string name="join_sub7">[선택] 광고성 정보 수신동의</string>
    <string name="join_sub8">[선택] 이메일 수신 동의</string>
    <string name="join_sub9">[선택] SMS,MMS 수신 동의</string>
    <string name="join_sub10">[선택] 앱 푸시 수신 동의</string>
    <string name="detail_bottom_sheet_content">아파트명/동/호 등의 정보를 입력하시면 더 정확하게 배달 할 수\n있습니다.</string>
    <string name="find_password_content1">• 쿠팡의 회원 비밀번호는 암호화 저장되어 분실 시 찾아드릴 수 없는 정보입니다.</string>
    <string name="find_password_content2">• 등록된 회원정보 확인을 통해 비밀번호를 재설정 하실 수 있습니다.</string>
    <string name="find_password_content3">쿠팡 가입시 등록하신 이름과 이메일을 기입하신 후, 비밀번호 재설정을 위한 메시지를 받을 곳을 선택해주세요</string>
    <string name="test_order_menu_detail">(시그니처메뉴)베이컨과 버섯이 들어가 느낌함을 잡아줄 매콤한 크림소스파스타</string>
    <string name="book_mark_content1">즐겨찾는 맛집이 없습니다.</string>
    <string name="book_mark_content2">좋아하는 맛집에 ❤︎를 눌러주세요</string>
    <string name="request_content1">문 앞에 두고 사진을 보내주세요 (초인종 o)</string>
    <string name="request_content2">문 앞에 두고 사진을 보내주세요 (초인종 x)</string>
    <string name="request_content3">직접 받을게요 (부재 시 문 앞)</string>
    <string name="request_content4">문 앞에 놔주세요 (초인종 o)</string>
    <string name="request_content5">문 앞에 놔주세요 (초인종 x)</string>
    <string name="request_content6">도착하면 전화해주세요</string>
    <string name="request_content7">도착하면 문자해주세요</string>
    <string name="request_content8">직접 입력하기</string>

</resources>