<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    app:behavior_draggable="true"
    android:paddingVertical="12dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="요청사항"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_finish"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_finish"
        app:layout_constraintTop_toTopOf="@id/tv_request"
        app:layout_constraintBottom_toBottomOf="@id/tv_request"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_request"
        android:orientation="vertical"
        android:layout_marginTop="12dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>

        <TextView
            android:id="@+id/content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_content1"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>

        <TextView
            android:id="@+id/content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_content2"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>

        <TextView
            android:id="@+id/content3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_content3"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>

        <TextView
            android:id="@+id/content4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_content4"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>

        <TextView
            android:id="@+id/content5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_content5"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>

        <TextView
            android:id="@+id/content6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_content6"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>

        <TextView
            android:id="@+id/content7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_content7"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>

        <TextView
            android:id="@+id/content8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_content8"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_grey"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>