<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_finish"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="12dp"
            android:src="@drawable/ic_finish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/Page_Bottom_sheet_Head_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="쿠팡!"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_finish"
            app:layout_constraintStart_toEndOf="@id/ic_finish"
            app:layout_constraintTop_toTopOf="@id/ic_finish" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/main_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_finish" />

        <TextView
            android:id="@+id/tv_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="비밀번호 찾기"
            android:textColor="@color/My_black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ic_finish"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_stroke_grey"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_finish"
            app:layout_constraintTop_toBottomOf="@id/tv_find_password">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_password_content1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/find_password_content2"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_stroke_grey"
                android:paddingHorizontal="5dp"
                android:paddingVertical="12dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="이름을 입력해주세요"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:background="@null" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_stroke_grey"
                android:paddingHorizontal="5dp"
                android:paddingVertical="12dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="아이디(이메일)를 입력해주세요"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textSize="13sp"
                    android:background="@null" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_password_content3"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="비밀번호 찾기 방법을 선택해주세요"
                android:textColor="@color/My_black"
                android:layout_marginTop="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_phone"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="휴대폰으로 찾기"
                    android:textColor="@color/My_white"
                    android:layout_marginEnd="8dp"
                    android:minWidth="1dp"
                    android:minHeight="1dp"
                    android:background="@color/btn_blue"/>

                <Button
                    android:id="@+id/btn_email"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="이메일로 받기"
                    android:minWidth="1dp"
                    android:minHeight="1dp"
                    android:textColor="@color/My_white"
                    android:background="@color/btn_blue"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>